--- a/moveit-next/src/styles/components/Profile.module.css
+++ b/moveit-next/src/styles/components/Profile.module.css
@@ -12,3 +12,18 @@
 .profileContainer div {
     margin-left: 1.5rem;
 }
+
+.profileContainer div strong {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--title);
+}
+
+.profileContainer div p {
+    font-size: 1rem;
+    margin-top: 0.5rem;
+}
+
+.profileContainer div p img {
+    margin-right: 0.5rem;
+}
