--- a/moveit-next/src/styles/components/Countdown.module.css
+++ b/moveit-next/src/styles/components/Countdown.module.css
@@ -77,4 +77,9 @@
     background: var(--white);
     color: var(--text);
     cursor: not-allowed;
+    border-bottom: 4px solid var(--green);
+}
+
+.countdownButton:disabled img {
+    margin-left: 10px;
 }
